Restructure the repository

--- a/Lab Assignments/2/2.md
+++ b/Lab Assignments/2/2.md
@@ -1,42 +1,36 @@
-# Stack Overflow?
+# 简单链表
 
-(Source: [SJTU Online Judge 3012](https://acm.sjtu.edu.cn/OnlineJudge/problem/3012))
+(Source: [SJTU Online Judge 4097](https://acm.sjtu.edu.cn/OnlineJudge/problem/4097))
 
 ## Description
-模拟一个堆栈的运行。
+给定一个 `N` 个数的数组，M次操作，每次操作为下列操作之一。求最后的数组。
+
+1. 在第 `X` 个数之后插入一个数 `Y`。
+2. 删除第 `X` 个数。
 
 ## Input
-第 1 行一个整数 `N`，表示有 `N` 个操作。($1 \leq N \leq 1,000$)
+第一行：两个整数 `N`, `M` ($N, M \leq 100000$)。  
+第二行：`N` 个整数，表示原来的数组。
 
-第 2 - `N + 1` 行，每行 2 个整数：`op`, `num`。
+接下来 `M` 行，每行第一个数 `OPT`，表示操作类型：
 
-`op = 1` 表示在堆栈中压入一个新的整数 `num`。
-
-`op = 2` 表示在堆栈中弹出最上面存储的整数，并与 `num` 进行比较。($1 \leq num \leq 1,000$)
+1. `X`, `Y`，保证 $0 \leq X \leq 当前数的个数$，若 $X = 0$，表示在数组开头插入。
+2. `X`，含义见题面描述，保证 $1 \leq X \leq 当前数的个数$。
 
 ## Output
-`N` 行。每行一个字符串，表示对应 `N` 个操作的运行结果。
-
-如果 `op = 1`，则直接输出一行 `OK`。
-
-如果 `op = 2`，如果堆栈中此时没有元素，输出 `ERROR`，并忽略这次操作。如果有元素，弹出最上面元素，并返回与 `num` 比较之后的结果。 如果相等，输出 `YES`，反之输出 `NO`。
+若干个数，表示最后的数组。
 
 ## Samples
 ### Sample Input 1
 ```
-5
-1 100
-1 200
-2 200
-2 300
-2 100
+5 3
+1 2 3 4 5
+1 1 6
+2 1
+2 2
 ```
 
 ### Sample Output 1
 ```
-OK
-OK
-YES
-NO
-ERROR
+6 3 4 5
 ```
