--- a/Lab Assignments/6/1.md
+++ b/Lab Assignments/6/1.md
@@ -1,57 +1,26 @@
-# 手把手教你写二分
+# 二哥学二叉树
 
-(Source: [SJTU Online Judge 4266](https://acm.sjtu.edu.cn/OnlineJudge/problem/4266))
+(Source: [SJTU Online Judge 1111](https://acm.sjtu.edu.cn/OnlineJudge/problem/1111))
 
 ## Description
-二分查找，是用来在一个有序数组中查找某一元素的算法。以在一个升序数组中查找一个数为例，它每次考察数组当前部分的中间元素，如果中间元素刚好是要找的，就结束搜索过程；如果中间元素小于所查找的值，那么左侧的只会更小，不会有所查找的元素，只需要到右侧去找就好了；如果中间元素大于所查找的值，同理，右侧的只会更大而不会有所查找的元素，所以只需要到左侧去找。
+二哥学了二叉树的顺序存储后，被下面一个问题难住了，于是他请你帮他解决。给你一个前序遍历和中序遍历，问顺序存储的数组是什么样子的。
 
-给定一个长度为 `n` 的升序序列 $a_1, ..., a_n$。
-
-给定 `m` 次询问，第 `j` 次询问给定 $b_j$，请求出 `a` 序列中第一个大于等于 $b_j$ 的数字。如果不存在这样一个数字，请输出 `-1`。
+<img src="http://acm.sjtu.edu.cn/w/images/e/e4/Ds2013_exam2_p1.JPG" alt="Example">
 
 ## Input
-第一行有两个整数，分别表示 `n`, `m`。
-
-第二行有 `n` 个整数，分别表示 $a_1, ..., a_n$。
-
-第三行有 `m` 个整数，分别表示 $b_1, ..., b_m$。
-
-$n, m \leq 10^5$
-
-$0 < a_i, b_i \leq 10^5$
+第一行为前序遍历，第二行为中序遍历，节点个数不超过 `26`。
 
 ## Output
-一共有 `m` 行，每行一个数字表示 `a` 序列中第一个大于等于 $b_j$ 的数字。
+输出一行，表示顺序存储的数组，以空格隔开，`NULL` 表示空节点，数组空间不超过 `1000` 个节点。
 
 ## Samples
 ### Sample Input 1
 ```
-5 5
-2 4 6 8 10
-4 20 9 1 5
+ABCD
+BADC
 ```
 
 ### Sample Output 1
 ```
-4
--1
-10
-2
-6
-```
-
-### Sample Input 2
-```
-5 5
-6 10 20 70 100
-90 60 1000 1 9
-```
-
-### Sample Output 2
-```
-100
-70
--1
-6
-10
+A B C NULL NULL D
 ```
