--- a/Lab Assignments/6/2.md
+++ b/Lab Assignments/6/2.md
@@ -1,40 +1,47 @@
-# 静态查找表
+# 完全二叉树
 
-(Source: [SJTU Online Judge 1051](https://acm.sjtu.edu.cn/OnlineJudge/problem/1051))
+(Source: [SJTU Online Judge 1043](https://acm.sjtu.edu.cn/OnlineJudge/problem/1043))
 
 ## Description
-如果一个用单链表存储的无序表中各个节点的查找概率不等，则可以用如下策略提高查找效率：若找到了指定节点，则让它移到链表的第一个位置，使得经常被查找的节点尽量靠近表头。
-
-请用程序模拟这个过程。最后输出按此策略查找指定数据一共做了多少次比较。
-
-注意，只能判断两个整数是相等或是不相等，也就是说，认为静态查找表中的元素是无序的！
+给出一棵二叉树，判断其是否为完全二叉树。
 
 ## Input
-第一行：一个整数 `n`，表示静态查找表中一共 `n` 个元素。($n, m \leq 10000$)
+第一行，$N < 1000000$，表示二叉树节点数。
 
-之后的 `n` 行，每行一个整数，按顺序给出了静态查找表中的元素，其中可能有重复元素。元素均小于 $10^9$。
+默认序号为 `0` 的节点为树根。接下来共 `N - 1` 行，依次表示序号为 `1`, ..., `N - 1` 的节点的父亲节点序号。
 
-之后的一行：一个整数 `m`，表示即将查找元素。
-
-之后的 `m` 行，每行一个整数，表示查找的元素。
+如果一个节点有两个孩子节点，左孩子节点序号总是小于右孩子节点序号。
 
 ## Output
-一个整数，表示一共进行了多少次比较。
+仅一行，如果是完全二叉树，则输出 `true`，否则输出 `false`。
 
 ## Samples
 ### Sample Input 1
 ```
-3
+6
+0
 1
-3
-4
-3
-2
 1
+0
 4
 ```
 
 ### Sample Output 1
 ```
-7
+true
+```
+
+### Sample Input 2
+```
+6
+0
+1
+1
+0
+3
+```
+
+### Sample Output 2
+```
+false
 ```
