--- a/Lab Assignments/2/1.md
+++ b/Lab Assignments/2/1.md
@@ -1,50 +1,38 @@
-# Brackets Stack
+# 约瑟夫环
 
-(Source: [SJTU Online Judge 1599](https://acm.sjtu.edu.cn/OnlineJudge/problem/1599))
+(Source: [SJTU Online Judge 4089](https://acm.sjtu.edu.cn/OnlineJudge/problem/4089))
 
 ## Description
-模拟一个括号栈，其元素是三种括号 `()`、`[]`、`{}`。
-
-给出长为 `n` 的操作序列，按序列要求完成以下几种操作：
-
-1. `push`
-2. `pop` (栈空则忽略此操作)
-3. 输出栈顶元素 (栈空则忽略此操作)
-4. 询问当前括号是否匹配 (栈空则认为匹配)
+设计并实现一个解决约瑟夫环问题的类 `Joseph`。当需要解决一个 `n` 个人间隔为 `m` 的约瑟夫环问题，可以构建一个对象 `Joseph obj(n, m)`，然后调用 `obj.simulate()` 输出模拟删除过程。
 
 ## Input
-第 1 行一个整数 `n`，代表总共有 `n` 次操作。
-
-第 2 - `n + 1` 行，每行 1 个整数，第一个数代表操作种类。
-
-对于操作 1，在同行给定一个入栈元素。
+两个正整数 `n` 和 `m`，空格分隔，分别代表编号长度和间隔长度，编号长度 $n \leq 50$。
 
 ## Output
-对于每次询问操作，输出一行代表答案。
-
-操作 3：输出栈顶元素
-
-操作 4：匹配输出 `YES`，否则输出 `NO`
-
-Hint:
-* `{[()]}` 匹配
-* `{[}]` 不匹配
+`n` 个整数，空格分隔。
 
 ## Samples
 ### Sample Input 1
 ```
-6
-1 (
-1 )
-3
-4
-2
-4
+10 4
 ```
 
 ### Sample Output 1
 ```
-)
-YES
-NO
+5 9 3 8 4 1 10 2 7 6
 ```
+
+### Sample Input 2
+```
+30 11
+```
+
+### Sample Output 2
+```
+12 23 4 16 28 10 24 7 21 6 22 9 27 15 3 26 18 13 8 5 11 17 25 2 30 1 20 14 19 29
+```
+
+## Hint
+* 约瑟夫环的**起始编号为 `1`**，编号为 $[1, n]$。
+* 注意判断数组是否溢出。
+* `m` 的值可以大于 `n`。
