--- a/Lab Assignments/3/1.md
+++ b/Lab Assignments/3/1.md
@@ -1,47 +1,50 @@
-# 二哥买车票
+# Brackets Stack
 
-(Source: [SJTU Online Judge 1109](https://acm.sjtu.edu.cn/OnlineJudge/problem/1109))
+(Source: [SJTU Online Judge 1599](https://acm.sjtu.edu.cn/OnlineJudge/problem/1599))
 
 ## Description
-买车票的人排起了长队，还有很多人插队。每个人有两个特性：$a_i$，这是他目前的任务的重要性 (数字越大，说明他的事情越紧急)，还有 $c_i$，这是一个人良心。这 `n` 个人的 $a_i$ 由 1 到 `n` 的数字不重复的排列构成。
+模拟一个括号栈，其元素是三种括号 `()`、`[]`、`{}`。
 
-此刻，假设队列里面有 `n - 1` 个人，让我们看一看第 `n` 个人的到来会发生什么。首先，他站在队列末尾，然后他会问前面那个人能不能插队，即执行以下操作：如果站在他前面那个人事情的重要性 ($a_i$) 没有他高，他们就会交换位置。然后，他又会继续向前面一个人问能不能插队，依此类推。但是如果前面那个人的 $a_i$ 比他的大，那他就停止他的插队工作。而且，该男子由于良心会收到谴责，最多只能插队 $c_n$ 次。
+给出长为 `n` 的操作序列，按序列要求完成以下几种操作：
 
-假设这个排队活动中，前一个人插完队之后下一个人才来。你的任务是帮助二哥为这个可恶的队伍做计算，当有 `n` 个人依次来排队，他们都插队结束之后，他们的顺序是什么？
+1. `push`
+2. `pop` (栈空则忽略此操作)
+3. 输出栈顶元素 (栈空则忽略此操作)
+4. 询问当前括号是否匹配 (栈空则认为匹配)
 
 ## Input
-第一行是一个整数 `n`，表示一共有几个人陆续来排队，$1 \leq n \leq 10^5$，他们的编号是 1 - `n`。
+第 1 行一个整数 `n`，代表总共有 `n` 次操作。
 
-之后的 `n` 行每行有两个数 $a_i$ 和 $c_i$，中间用一个空格隔开，$1 \leq a_i \leq n$, $0 \leq c_i \leq n$。
+第 2 - `n + 1` 行，每行 1 个整数，第一个数代表操作种类。
+
+对于操作 1，在同行给定一个入栈元素。
 
 ## Output
-一行，`n` 个数中间用一个空格隔开，是这 `n` 个人的编号，从前到后表示插队结束后这 `n` 个人的顺序。
+对于每次询问操作，输出一行代表答案。
+
+操作 3：输出栈顶元素
+
+操作 4：匹配输出 `YES`，否则输出 `NO`
+
+Hint:
+* `{[()]}` 匹配
+* `{[}]` 不匹配
 
 ## Samples
 ### Sample Input 1
 ```
+6
+1 (
+1 )
 3
-1 3
-2 3
-3 3
+4
+2
+4
 ```
 
 ### Sample Output 1
 ```
-3 2 1
-```
-
-### Sample Input 2
-```
-5
-2 3
-1 4
-4 3
-3 1
-5 2
-```
-
-### Sample Output 2
-```
-3 1 5 4 2
+)
+YES
+NO
 ```
