--- a/Lab Assignments/3/2.md
+++ b/Lab Assignments/3/2.md
@@ -1,38 +1,42 @@
-# 天真队列
+# Stack Overflow?
 
-(Source: [SJTU Online Judge 1607](https://acm.sjtu.edu.cn/OnlineJudge/problem/1607))
+(Source: [SJTU Online Judge 3012](https://acm.sjtu.edu.cn/OnlineJudge/problem/3012))
 
 ## Description
-假想这样一个场景，有一些人希望制定一系列潜在的规则来对人们的行为进行一定的约束，产生的原则之一便是先来后到。
-
-但是天真的人们自然用他们自己的眼光来看待这样一种规则，他们认为，如果当前的队列中有与其关系很好的人 (不如称为一个小团体)，那么便可以毫无顾忌的站在当前队列最靠后的那个小团体的人的后面，用一种占位子的天真借口。而那些因此想法而未得到好处的人 (队列中没有关系好的人)，便只能老实的排在最后面。
-
-现在你要做的，就是在人们的天真的想法之下，将这个日常平凡的过程再现出来。
+模拟一个堆栈的运行。
 
 ## Input
-第一行是一个数 `n`，表示参与排队的人的个数。
+第 1 行一个整数 `N`，表示有 `N` 个操作。($1 \leq N \leq 1,000$)
 
-第二行将会读入 `n` 个非负整数，每一个整数表示这个人所属的团体的 `id`，这个 `id` 是按照时序给出的。
+第 2 - `N + 1` 行，每行 2 个整数：`op`, `num`。
 
-第三行是一个数 `q`，代表可能的事件数。接下来 `q` 行，每一行代表一种可能的事件。
+`op = 1` 表示在堆栈中压入一个新的整数 `num`。
 
-* `0`：来了一个新人。如果每一个人都曾经入过一次队列了，你应当忽略这个操作。
-* `1`：队首的人离开了，请输出这个人的编号。如果队列空了，你应当输出 `-1`。
+`op = 2` 表示在堆栈中弹出最上面存储的整数，并与 `num` 进行比较。($1 \leq num \leq 1,000$)
 
 ## Output
-对于每一个询问类事件，输出对应的答案或者是 `-1`。 
+`N` 行。每行一个字符串，表示对应 `N` 个操作的运行结果。
+
+如果 `op = 1`，则直接输出一行 `OK`。
+
+如果 `op = 2`，如果堆栈中此时没有元素，输出 `ERROR`，并忽略这次操作。如果有元素，弹出最上面元素，并返回与 `num` 比较之后的结果。 如果相等，输出 `YES`，反之输出 `NO`。
 
 ## Samples
 ### Sample Input 1
 ```
-2
-1 2
-2
-0
-1
+5
+1 100
+1 200
+2 200
+2 300
+2 100
 ```
 
 ### Sample Output 1
 ```
-1
+OK
+OK
+YES
+NO
+ERROR
 ```
