--- a/Lab Assignments/4/2.md
+++ b/Lab Assignments/4/2.md
@@ -1,47 +1,38 @@
-# 完全二叉树
+# 天真队列
 
-(Source: [SJTU Online Judge 1043](https://acm.sjtu.edu.cn/OnlineJudge/problem/1043))
+(Source: [SJTU Online Judge 1607](https://acm.sjtu.edu.cn/OnlineJudge/problem/1607))
 
 ## Description
-给出一棵二叉树，判断其是否为完全二叉树。
+假想这样一个场景，有一些人希望制定一系列潜在的规则来对人们的行为进行一定的约束，产生的原则之一便是先来后到。
+
+但是天真的人们自然用他们自己的眼光来看待这样一种规则，他们认为，如果当前的队列中有与其关系很好的人 (不如称为一个小团体)，那么便可以毫无顾忌的站在当前队列最靠后的那个小团体的人的后面，用一种占位子的天真借口。而那些因此想法而未得到好处的人 (队列中没有关系好的人)，便只能老实的排在最后面。
+
+现在你要做的，就是在人们的天真的想法之下，将这个日常平凡的过程再现出来。
 
 ## Input
-第一行，$N < 1000000$，表示二叉树节点数。
+第一行是一个数 `n`，表示参与排队的人的个数。
 
-默认序号为 `0` 的节点为树根。接下来共 `N - 1` 行，依次表示序号为 `1`, ..., `N - 1` 的节点的父亲节点序号。
+第二行将会读入 `n` 个非负整数，每一个整数表示这个人所属的团体的 `id`，这个 `id` 是按照时序给出的。
 
-如果一个节点有两个孩子节点，左孩子节点序号总是小于右孩子节点序号。
+第三行是一个数 `q`，代表可能的事件数。接下来 `q` 行，每一行代表一种可能的事件。
+
+* `0`：来了一个新人。如果每一个人都曾经入过一次队列了，你应当忽略这个操作。
+* `1`：队首的人离开了，请输出这个人的编号。如果队列空了，你应当输出 `-1`。
 
 ## Output
-仅一行，如果是完全二叉树，则输出 `true`，否则输出 `false`。
+对于每一个询问类事件，输出对应的答案或者是 `-1`。 
 
 ## Samples
 ### Sample Input 1
 ```
-6
+2
+1 2
+2
 0
 1
-1
-0
-4
 ```
 
 ### Sample Output 1
 ```
-true
-```
-
-### Sample Input 2
-```
-6
-0
 1
-1
-0
-3
-```
-
-### Sample Output 2
-```
-false
 ```
