--- a/Practical Exams/2/2.md
+++ b/Practical Exams/2/2.md
@@ -1,4 +1,4 @@
-# Chika and Pack
+# Lowest Common Ancestor in BST
 
 (Source: [SJTU Online Judge 4358](https://acm.sjtu.edu.cn/OnlineJudge/problem/4358))
 
