--- a/Lab Assignments/2/2.md
+++ b/Lab Assignments/2/2.md
@@ -3,16 +3,16 @@
 (Source: [SJTU Online Judge 4097](https://acm.sjtu.edu.cn/OnlineJudge/problem/4097))
 
 ## Description
-给定一个 `N` 个数的数组，M次操作，每次操作为下列操作之一。求最后的数组。
+给定一个 `n` 个数的数组，m次操作，每次操作为下列操作之一。求最后的数组。
 
 1. 在第 `X` 个数之后插入一个数 `Y`。
 2. 删除第 `X` 个数。
 
 ## Input
-第一行：两个整数 `N`, `M` ($N, M \leq 100000$)。  
-第二行：`N` 个整数，表示原来的数组。
+第一行：两个整数 `n`, `m` ($n, m \leq 100000$)。  
+第二行：`n` 个整数，表示原来的数组。
 
-接下来 `M` 行，每行第一个数 `OPT`，表示操作类型：
+接下来 `m` 行，每行第一个数 `OPT`，表示操作类型：
 
 1. `X`, `Y`，保证 $0 \leq X \leq 当前数的个数$，若 $X = 0$，表示在数组开头插入。
 2. `X`，含义见题面描述，保证 $1 \leq X \leq 当前数的个数$。
