--- a/Lab Assignments/3/2.md
+++ b/Lab Assignments/3/2.md
@@ -6,16 +6,16 @@
 模拟一个堆栈的运行。
 
 ## Input
-第 1 行一个整数 `N`，表示有 `N` 个操作。($1 \leq N \leq 1,000$)
+第 1 行一个整数 `n`，表示有 `n` 个操作。($1 \leq n \leq 1,000$)
 
-第 2 - `N + 1` 行，每行 2 个整数：`op`, `num`。
+第 2 - `n + 1` 行，每行 2 个整数：`op`, `num`。
 
 `op = 1` 表示在堆栈中压入一个新的整数 `num`。
 
 `op = 2` 表示在堆栈中弹出最上面存储的整数，并与 `num` 进行比较。($1 \leq num \leq 1,000$)
 
 ## Output
-`N` 行。每行一个字符串，表示对应 `N` 个操作的运行结果。
+`n` 行。每行一个字符串，表示对应 `n` 个操作的运行结果。
 
 如果 `op = 1`，则直接输出一行 `OK`。
 
