--- a/Lab Assignments/6/2.md
+++ b/Lab Assignments/6/2.md
@@ -6,9 +6,9 @@
 给出一棵二叉树，判断其是否为完全二叉树。
 
 ## Input
-第一行，$N < 1000000$，表示二叉树节点数。
+第一行，$n < 1000000$，表示二叉树节点数。
 
-默认序号为 `0` 的节点为树根。接下来共 `N - 1` 行，依次表示序号为 `1`, ..., `N - 1` 的节点的父亲节点序号。
+默认序号为 `0` 的节点为树根。接下来共 `n - 1` 行，依次表示序号为 `1`, ..., `n - 1` 的节点的父亲节点序号。
 
 如果一个节点有两个孩子节点，左孩子节点序号总是小于右孩子节点序号。
 
