--- a/Lab Assignments/7/2.md
+++ b/Lab Assignments/7/2.md
@@ -3,21 +3,21 @@
 (Source: [SJTU Online Judge 4185](https://acm.sjtu.edu.cn/OnlineJudge/problem/4185))
 
 ## Description
-给定 `N` 个权重作为叶子节点，请你构建一棵哈夫曼树。
+给定 `n` 个权重作为叶子节点，请你构建一棵哈夫曼树。
 
 如果你需要排序，请使用堆帮助你降低时间复杂度。
 
 ## Input
-输入文件 `N + 1` 行。
+输入文件 `n + 1` 行。
 
-第一行包括一个正整数 `N`，`N` 是叶子节点的个数。($1 \leq n \leq 10000$)
+第一行包括一个正整数 `n`，`n` 是叶子节点的个数。($1 \leq n \leq 10000$)
 
-第 `2` - `N + 1` 行包括 `N` 个 `int` 数据，代表节点权重 `w[i]`。($1 \leq w[i] \leq 100000$)
+第 `2` - `n + 1` 行包括 `n` 个 `int` 数据，代表节点权重 `w[i]`。($1 \leq w[i] \leq 100000$)
 
 ## Output
 输出所有节点权重乘长度的总和，即
 
-$$\sum_{i = 1}^N w[i]\times \textrm{len}[i]$$
+$$\sum_{i = 1}^n w[i]\times \textrm{len}[i]$$
 
 ## Samples
 ### Sample Input 1
