--- a/Lab Assignments/7/1.md
+++ b/Lab Assignments/7/1.md
@@ -3,7 +3,7 @@
 (Source: [SJTU Online Judge 1050](https://acm.sjtu.edu.cn/OnlineJudge/problem/1050))
 
 ## Description
-二哥把所有女朋友候选人列了出来，一共有 `N` 组，编号为 `0` - `N - 1`。最开始的时候每组只有 `1` 个女生，每个女生有一个魅力值。二哥不断进行以下三种操作：
+二哥把所有女朋友候选人列了出来，一共有 `n` 组，编号为 `0` - `n - 1`。最开始的时候每组只有 `1` 个女生，每个女生有一个魅力值。二哥不断进行以下三种操作：
 
 1. 将一组并入另一组。
 2. 将一组中魅力值最小的拿走。
@@ -12,11 +12,11 @@
 值得注意的是，如果 `X` 组在操作 `0` 中被并入其他组，那么二哥将不会再对 `X` 组进行这三种操作。
 
 ## Input
-第一行：`N`, `M`，分别表示最开始的组数与总的操作的次数。($0 \leq N, M \leq 300,000$)
+第一行：`n`, `m`，分别表示最开始的组数与总的操作的次数。($0 \leq n, m \leq 300,000$)
 
-接下来 `N` 行，每行一个整数，表示最初 `0` - `N - 1`组中那个女生的魅力值。
+接下来 `n` 行，每行一个整数，表示最初 `0` - `n - 1`组中那个女生的魅力值。
 
-接下来 `M` 行，每行首先是一个整数，表示操作编号，`0` 表示合并，`1` 表示拿走魅力值最小的，`2` 表示添加。
+接下来 `m` 行，每行首先是一个整数，表示操作编号，`0` 表示合并，`1` 表示拿走魅力值最小的，`2` 表示添加。
 
 对于操作 `0`，跟着两个整数 `a b`，表示将编号为 `b` 的组并入编号为 `a` 的组 (编号为 `b` 的组从此消失了)。
 
